# ai-admin-hub

./: .gitignore  CHANGELOG.md  README.md  ai-admin-hub.sln  pyproject.toml
docs/: AI Admin Hub - Product Backlog.md
src/ai_admin_hub/: cli.py
src/clients/: n8n_client.py
src/commands/: config_cmd.py
tests/: test_n8n_client.py
